assorted fixes after running FindBugs